# rust-template

./: Cargo.toml  Dockerfile  Dockerfile.test  LICENSE-MIT  README.md  deny.toml
.github/workflows/: publish.yml  push_docker_image.yml  sanity_checks.yml
src/: main.rs
