[package]
name = "{{project-name}}"
description = "{{project-name}}"
version = "0.1.0"
edition = "2021"
authors = ["{{authors}}"]
repository = "https://github.com/{{username}}/{{project-name}}"
readme = "README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = "thin"

[dependencies]

[dev-dependencies]
pretty_assertions = "1"
