[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "{{project-name}}"
readme = "README.md"
repository = "https://github.com/{{username}}/{{project-name}}"
license = "MIT OR Apache-2.0"
include = ["**/*.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = "thin"

[dependencies]

[dev-dependencies]
pretty_assertions = "1"
